force-app/main/default/objects/LFL_Statistics_Gatherer_Log__c/LFL_Statistics_Gatherer_Log__c.object-meta.xml
<CustomObject>
    <label>LFL Statistics Gatherer Log</label>
    <nameField>
        <displayFormat>LFLSG-{000000}</displayFormat>
        <label>LFLSG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LFL Statistics Gatherer Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>