force-app/main/default/objects/LFL_Statistics_Gatherer_Log__c/fields/LFLSG_Class__c.field-meta.xml
<CustomField>
    <fullName>LFLSG_Class__c</fullName>
    <label>LFLSG Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>