force-app/main/default/objects/LFL_Statistics_Gatherer_Log__c/fields/LFLSG_Message__c.field-meta.xml
<CustomField>
    <fullName>LFLSG_Message__c</fullName>
    <label>LFLSG Message</label>
    <type>TextArea</type>
</CustomField>