force-app/main/default/objects/LFL_Statistics_Gatherer_Log__c/fields/LFLSG_Objective__c.field-meta.xml
<CustomField>
    <fullName>LFLSG_Objective__c</fullName>
    <label>LFLSG Objective</label>
    <type>TextArea</type>
</CustomField>