force-app/main/default/objects/LFL_Statistics_Gatherer_Log__c/fields/LFLSG_Status__c.field-meta.xml
<CustomField>
    <fullName>LFLSG_Status__c</fullName>
    <label>LFLSG Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>